[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Scenes/Util/TopBar.gd" type="Script" id=1]
[ext_resource path="res://Resources/Collision/TopBar.tres" type="Shape2D" id=2]

[node name="TopBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 510, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="DropdownList" type="Control" parent="."]
margin_left = 80.0
margin_top = -40.0
margin_right = 120.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="DropdownList"]
margin_left = -10.0
margin_top = -30.0
margin_right = 790.0
margin_bottom = 40.0

[node name="Expression" type="OptionButton" parent="DropdownList"]
margin_top = 10.0
margin_right = 180.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="DropdownList/Expression"]
margin_top = -20.0
margin_right = 40.0
text = "Expression"

[node name="Background" type="OptionButton" parent="DropdownList"]
editor/display_folded = true
margin_left = 200.0
margin_top = 10.0
margin_right = 380.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="DropdownList/Background"]
margin_top = -20.0
margin_right = 74.0
text = "Background"

[node name="BGM" type="OptionButton" parent="DropdownList"]
editor/display_folded = true
margin_left = 400.0
margin_top = 10.0
margin_right = 580.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="DropdownList/BGM"]
margin_top = -20.0
margin_right = 74.0
text = "BGM"

[node name="SFX" type="OptionButton" parent="DropdownList"]
editor/display_folded = true
margin_left = 600.0
margin_top = 10.0
margin_right = 780.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="DropdownList/SFX"]
margin_top = -20.0
margin_right = 40.0
text = "SFX"

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
